added open API docs to product API, updated all open API docs to add tags
